<resources>
    <string name="app_name">hWork7–1</string>
    <string name="buttonDeleteText">delete</string>
    <string name="buttonSevenText">7</string>
    <string name="buttonEightText">8</string>
    <string name="buttonNineText">9</string>
    <string name="buttonFourText">4</string>
    <string name="buttonFiveText">5</string>
    <string name="buttonSixText">6</string>
    <string name="buttonOneText">1</string>
    <string name="buttonTwoText">2</string>
    <string name="buttonThreeText">3</string>
    <string name="buttonSubmissionSignText">-</string>
    <string name="buttonDotSignText">.</string>
    <string name="buttonZeroText">0</string>
    <string name="buttonEqualSignText">=</string>
    <string name="buttonAdditionSignText">+</string>
</resources>