<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:id="@+id/resultOfOperations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDeleteText"            android:textStyle="bold"
            android:textSize="15sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonSevenText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonEightText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonNineText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonDivisionSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonFourText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonFiveText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonSixText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonMultiplicationSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonOneText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonTwoText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonThreeText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonSubmissionSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonSubmissionSignText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonDotSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonDotSignText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonZeroText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonEqualSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonEqualSignText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonPluralSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buttonAdditionSignText"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>